[GOHW-4]: add ApiServiceServer
